# BrowserOS

./: .gitignore  CONTRIBUTING.md  OWEB_BROWSER.md  README.md
.github/: actionlint.yaml
.github/workflows/: bos-build-tests.yml  build-browseros.yml  build-vm-container.yml  build-vm.yml  claude.yml  code-quality.yml  eval-weekly.yml  nightly-browserclaw.yml  nightly-browseros.yml  nightly-macos-build.yml  nightly-release.yml  release-agent-extension.yml  release-browserclaw.yml  release-browseros.yml  release-claw-server-rust.yml  release-claw-server.yml  release-cli.yml  release-extension-feeds.yml  release-extensions.yml  release-full.yml  release-linux.yml  release-macos.yml  release-oweb.yml  release-server.yml  release-windows.yml  sync-internal-docs.yml  test.yml
docs/: OPENCLAW_CAPABILITY_AUDIT.md
docs/browserclaw/: how-it-works.mdx  index.mdx  install.mdx  tabs-and-isolation.mdx
docs/design/: mcp-connect-claude-type-http-fix.md
oweb/: README.md  agent.env.example  build-windows.ps1  fetch-chromium.ps1  generate-icons.py  setup-windows.ps1
oweb-gap-closures/: README.md  package-lock.json  package.json  tsconfig.json  vercel.integration.example.json
prototypes/click_eval/: README.md  pyproject.toml  requirements.txt
prototypes/click_eval/examples/: models.json  tasks.jsonl
prototypes/click_eval/src/click_eval/: cli.py  contracts.py  gemini.py  harness.py  io.py  local_hf.py  openai_cu.py  openrouter.py  parsing.py  providers.py  scoring.py  viz.py
scripts/: audit-composio-vs-openclaw.ts  seed-ao-skills.ts  sync-openclaw-skills.ts
(+57 files in other folders)
