[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "click-eval"
version = "0.1.0"
description = "Quick OpenRouter VLM click-point evaluation prototype"
requires-python = ">=3.12"
dependencies = [
  "Pillow>=10.0.0",
  "tqdm>=4.67.3",
]

[project.optional-dependencies]
local = [
  "accelerate>=1.0.0",
  "einops>=0.8.0",
  "requests>=2.32.0",
  "torch>=2.5.0",
  "torchvision>=0.20.0",
  "transformers>=4.57.0",
]

[project.scripts]
click-eval = "click_eval.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.14.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
target-version = "py312"
